--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heroes",
+  "name": "angular2-boilerplate",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
