--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
     "typings":"^1.0.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hareuhtee/angular2-boilerplate.git"
+  }  
 }
